--- a/project1.html
+++ b/project1.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-2 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
-3 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
-4 
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+ <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
  
-5   <head> 
-6     <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-7     <title>Page Title Goes Here</title> 
-8   </head> 
-9 
  
-10   <body> 
-11     <!--  Page content goes here --> 
-12   </body> 
-13 
+   <head> 
+     <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
+    <title> My First Web Page </title> 
+  </head> 
+
  
-14 </html> 
+  <body> 
+   <h1>Hello World!</h1>
+   <h2>A person i admire</h2>
+   <p>My mom, because she is alwayse there for me.</p>
+  <h2>Favorite fruits</h2>
+   <ul> 
+    <li>peaches</li>
+    <li>pears</li>
+    <li>oranges</li>
+   </ul>
+   <h2>Favorite President</h2>
+   <ol>
+    <li>George Washington</li>
+    <li>Teddy Roosevelt</li>
+    <li>Donald Trump</li>
+   </ol>
+   
+   </body> 
+ 
+ 
+ </html> 
