--- a/project1.html
+++ b/project1.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
@@ -18,12 +19,16 @@
     <li>peaches</li>
     <li>pears</li>
     <li>oranges</li>
+    <li>Mangos</li>
+    <li>Dragon Fruit</li>
    </ul>
    <h2>Favorite President</h2>
    <ol>
-    <li>George Washington</li>
-    <li>Teddy Roosevelt</li>
-    <li>Donald Trump</li>
+    <li>Washington</li>
+    <li>Adams</li>
+    <li>Jefferson</li>
+    <li>Roosevelt</li>
+    <li>Trump</li>
    </ol>
    
    </body> 
