--- a/project1.html
+++ b/project1.html
@@ -1,4 +1,4 @@
-
+I
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
@@ -12,7 +12,7 @@
  
   <body> 
    <h1>Hello World!</h1>
-   <h2>A person i admire</h2>
+   <h2>A person I admire</h2>
    <p>My mom, because she is alwayse there for me.</p>
   <h2>Favorite fruits</h2>
    <ul> 
