--- a/project2.html
+++ b/project2.html
@@ -14,7 +14,7 @@
    <h1>Hello World!</h1><hr>
    <h2>A person I admire</h2><br/>(past or present)
    <p>My mom, because she is alwayse there for me.</p>
-  <h2>Favorite fruits</h2>
+  <h2>Favorite Fruits</h2>
    <ul> 
     <li>peaches</li>
     <li>pears</li>
@@ -29,8 +29,12 @@
     <li>Jefferson</li>
     <li>Roosevelt</li>
     <li>Trump</li>
-   </ol>
-   
+    <li><a href="https://www.youtube.com/watch?v=f0UB06v7yLY" target_blank">See Great Moments Of Trump 2016.</a></li>
+     <li> had no outside source for my mom, so this is the second link that was needed.</li>
+     </ol>
+     <p>The place I would love to visit.</p>
+     <ul>
+     <li><a href="https://www.tripadvisor.com/Tourism-g147395-Turks_and_Caicos-Vacations.html" target_blank">Turks and Caicos.</a></li>
    </body> 
  
  
