--- a/project2.html
+++ b/project2.html
@@ -11,7 +11,7 @@
 
  
   <body> 
-   <h1>Hello World!</h1><hr>
+   <h1>Hello World!</h1><hr/>
    <h2>A person I admire</h2><br/>(past or present)
    <p>My mom, because she is alwayse there for me.</p>
   <h2>Favorite Fruits</h2>
