--- a/project2.html
+++ b/project2.html
@@ -1,4 +1,4 @@
- I
+I
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
@@ -29,12 +29,12 @@
     <li>Jefferson</li>
     <li>Roosevelt</li>
     <li>Trump</li>
-    <li><a href="https://www.youtube.com/watch?v=f0UB06v7yLY" target_blank">See Great Moments Of Trump 2016.</a></li>
+    <li><a href="https://www.youtube.com/watch?v=f0UB06v7yLY" target="_blank">See Great Moments Of Trump 2016.</a></li>
      <li> had no outside source for my mom, so this is the second link that was needed.</li>
      </ol>
      <p>The place I would love to visit.</p>
      <ul>
-     <li><a href="https://www.tripadvisor.com/Tourism-g147395-Turks_and_Caicos-Vacations.html" target_blank">Turks and Caicos.</a></li>
+     <li><a href="https://www.tripadvisor.com/Tourism-g147395-Turks_and_Caicos-Vacations.html" target="_blank">Turks and Caicos.</a></li>
    </body> 
  
  
