--- a/project2.html
+++ b/project2.html
@@ -9,7 +9,7 @@ I
     <title> My First Web Page </title> 
   </head> 
 
- 
+ <!--Made by....cale-->
   <body> 
    <h1>Hello World!</h1><hr/>
    <h2>A person I admire</h2><br/>(past or present)
@@ -35,7 +35,9 @@ I
      <p>The place I would love to visit.</p>
      <ul>
      <li><a href="https://www.tripadvisor.com/Tourism-g147395-Turks_and_Caicos-Vacations.html" target="_blank">Turks and Caicos.</a></li>
-   </body> 
+  <!--some birds cant fly, just thought you should know.-->
+      </body> 
+  
  
  
  </html> 
