--- a/project2.html
+++ b/project2.html
@@ -36,7 +36,7 @@ I
      <p>The place I would love to visit.</p>
      <ul>
      <li><a href="https://www.tripadvisor.com/Tourism-g147395-Turks_and_Caicos-Vacations.html" target="_blank">Turks and Caicos.</a></li>
-     <img src="images/dinodinoclap.jpg" width="350" height="275" alt="Dino Clap" /> 
+     <img src="images/turtur.jpg" width="350" height="275" alt="turturc" /> 
   <!--some birds cant fly, just thought you should know.-->
       </body> 
   
