--- a/project3.html
+++ b/project3.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title> My Favorite Animal </title>
   </head>
-
+<img src="images/liger.jpg" width="350" height="275" alt="ligers are a mix between lions and tigers" />
   <body>
     <!--  Page content goes here -->
   </body>
