--- a/project3.html
+++ b/project3.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <h1>The Liger</h1>
     <img src="images/liger.jpg" width="350" height="275" alt="ligers are a mix between lions and tigers" />
   </body>
 
