--- a/project3.html
+++ b/project3.html
@@ -11,7 +11,9 @@
     <h1>The Liger</h1>
     <img src="images/liger.jpg" width="350" height="275" alt="ligers are a mix between lions and tigers" />
     <a href="project2.html" target="_blank">project2.html.</a>
-    
+    <ul>
+      <li>Return To Home</li?
+    </ul>
   </body>
 
 </html>
