--- a/project3.html
+++ b/project3.html
@@ -10,7 +10,7 @@
   <body>
     <h1>The Liger</h1>
     <img src="images/liger.jpg" width="350" height="275" alt="ligers are a mix between lions and tigers" />
-    <p><a href="project2.html" target="_blank">Return To Home</a></p>
+    <a href="project2.html" target="_blank">Return To Home</a>
     <ul>
       <li>Return To Home</li?
     </ul>
