--- a/project4.html
+++ b/project4.html
@@ -4,11 +4,11 @@
 
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Page Title Goes Here</title>
+    <title>cars and some more cars</title>
   </head>
 
   <body>
-    <!--  Page content goes here -->
+       <img src="images/dinodinoclap.jpg" width="350" height="275" alt="Dino Clap" />
   </body>
 
 </html>
