--- a/project4.html
+++ b/project4.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-       <img src="images/dinodinoclap.jpg" width="350" height="275" alt="Dino Clap" />
+       <img src="images/mustang.gif" width="150" height="150" alt="mustang" />
   </body>
 
 </html>
