--- a/project4.html
+++ b/project4.html
@@ -9,6 +9,7 @@
 
   <body>
        <img src="images/mustang.gif" width="150" height="150" alt="mustang" />
+       <img src="images/lambo.jpg" width="150" height="150" alt="lambo" />
   </body>
 
 </html>
