--- a/project4.html
+++ b/project4.html
@@ -8,8 +8,11 @@
   </head>
 
   <body>
-    <p>
+    <h1>Mustang Power</h1>
        <img src="images/mustang.gif" width="150" height="150" alt="mustang" />
+    
+    
+    <h1>Lamborghini Classic</h1>
        <img src="images/lambo.jpg" width="150" height="150" alt="lambo" />
   </body>
 
