--- a/project4.html
+++ b/project4.html
@@ -16,7 +16,7 @@
        <img src="images/lambo.jpg" width="350" height="250" alt="lambo" />
     
     <h1>Nissan ZX300</h1>
-    <img src="images/nissan.gif" width="250" height="250" alt="nissan" />
+    <img src="images/nisan.gif" width="250" height="250" alt="nissan" />
   </body>
 
 </html>
