--- a/project4.html
+++ b/project4.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>Mustang Power</h1>
-       <img src="images/mustang.gif" width="250" height="250" alt="mustang" />
+      <a href="image1.html"><img src="images/mustang.gif" width="250" height="250" alt="mustang" /></a>
     
     
     <h1>Lamborghini Classic</h1>
