--- a/image2.html
+++ b/image2.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>Page Title Goes Here</title>
+  </head>
+
+  <body>
+    <img src="images/lambo.jpg" alt="lambo"/>
+    <a href="project4.html"> back to photo gallery</a>
+      <a href="image1.html"> image 2</a>
+        <a href="image3.html"> image3</a>
+          <a href="image4.html"> image4</a>
+  </body>
+
+</html>
 
