--- a/project4.html
+++ b/project4.html
@@ -27,6 +27,13 @@
     <h1>Subaru Wrx STI</h1>
     <a href="image5.html"><img src="images/wrx.gif" width="350" height="250" alt="nissan" /></a>
     
+    <ol>
+      <li><a href="image1.html"> image1</a></li>
+      <li><a href="image2.html"> image2</a></li>
+      <li><a href="image3.html"> image3</a></li>
+      <li><a href="image4.html">image4</a></li>
+      <li><a href="image5.html"> image5</a></li>
+    </ol>
     
    
   </body>
