--- a/project5.html
+++ b/project5.html
@@ -10,7 +10,91 @@
 
   <body>
     <h1>My Favorite Songs</h1></hr>
-  <h1>Top Ten</h1></br>
+  <h1>Top Ten</h1></br></hr>
+<table border="1">
+  <tr>
+    <td>Name</td>
+    <td>Artist</td>
+    <td>Genre</td>
+    <td>Rating 1-10</td>
+  </tr>
+  <tr>
+    <td>Keep It Mellow</td>
+    <td>Marshmellow</td>
+    <td>EDM</td>
+    <td>8</td>
+  </tr>
+  <tr>
+    <td>Bohemian Rhapsody</td>
+    <td>Queen</td>
+    <td>Rock</td>
+    <td>10</td>
+      </tr>
+  <tr>
+    <td>Three Little Birds</td>
+    <td>Bob Marley</td>
+    <td>Reggae</td>
+    <td>9</td>
+      </tr>
+  <tr>
+    <td>Believer</td>
+    <td>Imagine Dragons</td>
+    <td>Alternative</td>
+    <td>10</td>
+      </tr>
+  <tr>
+    <td>Down Under</td>
+    <td>Men At Work</td>
+    <td>Rock</td>
+    <td>7</td>
+      </tr>
+  <tr>
+    <td>Breathe</td>
+    <td>G-Easy</td>
+    <td>Rap</td>
+    <td>8</td>
+      </tr>
+  <tr>
+    <td>The Wanderer</td>
+    <td>Dion</td>
+    <td>Pop</td>
+    <td>9</td>
+      </tr>
+  <tr>
+    <td>Du Hast</td>
+    <td>Rammstein</td>
+    <td>Rock</td>
+    <td>7</td>
+      </tr>
+  <tr>
+    <td>Sweet Child O' Mine</td>
+    <td>Gins N' Roses</td>
+    <td>Rock</td>
+    <td>10</td>
+      </tr>
+  <tr>
+    <td>Sweet Emotion</td>
+    <td>Aerosmith</td>
+    <td>Rock</td>
+    <td>10</td>
+  </tr>
+</table>
+
+  <h1>Recently Played</h1><br>
+
+  <table border="1">
+  <tr>
+    <td>Keep It Mellow</td>
+    <td>Bohemian Rhapsody</td>
+    <td>Three Little Birds</td>
+      </tr>
+  <tr>
+    <td>Breathe</td>
+    <td>Du Hast</td>
+    <td>Sweet Emotion</td>
+  </tr>
+</table>    
+    
     
   </body>
 
