--- a/project5.html
+++ b/project5.html
@@ -9,8 +9,8 @@
   </head>
 
   <body>
-    <h1>My Favorite Songs</h1></hr>
-  <h1>Top Ten</h1></br></hr>
+    <h1>My Favorite Songs</h1></hr><br>
+  <h1>Top Ten</h1></hr><br>
 <table border="1">
   <tr>
     <td>Name</td>
