--- a/project5.html
+++ b/project5.html
@@ -82,7 +82,7 @@
 
   <h1>Recently Played</h1><br>
 
-  <table border="1">
+  <table>
   <tr>
     <td>Keep It Mellow</td>
     <td>Bohemian Rhapsody</td>
