--- a/project5.html
+++ b/project5.html
@@ -52,8 +52,7 @@
     <td>7</td>
       </tr>
   <tr>
-    <td>Breathe</td>
-    <td>G-Easy</td>
+    <td>Breathe</td>    <td>G-Easy</td>
     <td>Rap</td>
     <td>8</td>
       </tr>
@@ -100,5 +99,5 @@
     
     
   </body>
-
+</html>
 </html
