--- a/project6.html
+++ b/project6.html
@@ -1,1 +1,69 @@
+I
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
+ <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
+ 
+ 
+   <head> 
+     <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
+    <title> My First Web Page </title> 
+     <style>
+       h1{
+    color: red;
+    text-align: center;
+       }
+       h2{
+         text-decoration:underline;
+         text-align: center;
+       }
+       p{
+         font-family:tahoma;
+         color:green;
+       }
+       ul{
+         font-style:italic:
+       ol{
+         font-weight:bold;
+         font-size:20px;
+       }
+       
+     </style>
+  </head> 
 
+ <!--Made by....cale-->       }
+
+  <body> 
+  
+    <h1>Hello World!</h1><hr/>
+   <h2>A person I admire</h2><br/>(past or present)
+   <p>My mom, because she is alwayse there for me.</p>
+   <img src="images/dinodinoclap.jpg" width="350" height="275" alt="Dino Clap" />
+  <h2>Favorite Fruits</h2>
+   <ul> 
+    <li>peaches</li>
+    <li>pears</li>
+    <li>oranges</li>
+    <li>Mangos</li>
+    <li>Dragon Fruit</li>
+   </ul>
+   <h2>Favorite President</h2>
+   <ol>
+    <li>Washington</li>
+    <li>Adams</li>
+    <li>Jefferson</li>
+    <li>Roosevelt</li>
+    <li>Trump</li>
+    <li><a href="https://www.youtube.com/watch?v=f0UB06v7yLY" target="_blank">See Great Moments Of Trump 2016.</a></li>
+     <li> had no outside source for my mom, so this is the second link that was needed.</li>
+     </ol>
+     <p>The place I would love to visit.</p>
+     <ul>
+     <li><a href="https://www.tripadvisor.com/Tourism-g147395-Turks_and_Caicos-Vacations.html" target="_blank">Turks and Caicos.</a></li>
+     <img src="images/turtur.jpg" width="350" height="275" alt="turturc" />
+      <a href="project3.html" target="_blank">project3.html.</a>
+  <!--some birds cant fly, just thought you should know.-->
+      </body> 
+  
+ 
+ 
+ </html> 
