--- a/project6.html
+++ b/project6.html
@@ -6,7 +6,7 @@ I
  
    <head> 
      <meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-    <title> My First Web Page </title> 
+    <title> Internal Style Sheet </title> 
      <style>
        h1{
     color: red;
