--- a/project6.html
+++ b/project6.html
@@ -1,4 +1,3 @@
-I
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
  <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"> 
@@ -21,7 +20,8 @@ I
          color:green;
        }
        ul{
-         font-style:italic:
+         font-style:italic;
+      }
        ol{
          font-weight:bold;
          font-size:20px;
@@ -30,7 +30,7 @@ I
      </style>
   </head> 
 
- <!--Made by....cale-->       }
+ <!--Made by....cale-->       
 
   <body> 
   
