--- a/project7.html
+++ b/project7.html
@@ -9,14 +9,22 @@
   </head>
   <style>
    #main-headline {
-    text-align: center;
-   
+   text-align: center;
+    color: blue;
+   }
+    #a-z {
+   text-align: center;
+    color: purple;
+   }
+  </style>
 
+   
  <!--Made by....cale-->
   <body> 
-   <h1>Hello World!</h1><hr/>
-   <h2>A person I admire</h2><br/>(past or present)
+   <h1 id="main-headline" >Hello World!</h1><hr/>
+   <h2 id="a-z">A person I admire</h2><br/>(past or present)
    <p>My mom, because she is alwayse there for me.</p>
+   <span class"important-point">she is strong and fearless.</span>
    <img src="images/dinodinoclap.jpg" width="350" height="275" alt="Dino Clap" />
   <h2>Favorite Fruits</h2>
    <ul> 
@@ -36,7 +44,7 @@
     <li><a href="https://www.youtube.com/watch?v=f0UB06v7yLY" target="_blank">See Great Moments Of Trump 2016.</a></li>
      <li> had no outside source for my mom, so this is the second link that was needed.</li>
      </ol>
-     <p>The place I would love to visit.</p>
+     <p class="place-descripton">The place I would love to visit.</p>
      <ul>
      <li><a href="https://www.tripadvisor.com/Tourism-g147395-Turks_and_Caicos-Vacations.html" target="_blank">Turks and Caicos.</a></li>
      <img src="images/turtur.jpg" width="350" height="275" alt="turturc" />
