--- a/project8.html
+++ b/project8.html
@@ -15,7 +15,8 @@
     
 <table border="1">
   <tr>
-    <td>old</td>
+    <th colspan="2">name</th>
+    <th rowspan="2">old 1</th>
     <td>Name</td>
     <td>Artist</td>
     <td>Rating 1-10</td>
