--- a/project8.html
+++ b/project8.html
@@ -15,8 +15,6 @@
     
 <table border="1">
   <tr>
-    <th colspan="2">name</th>
-    <th rowspan="2">old 1</th>
     <td>Name</td>
     <td>Artist</td>
     <td>Rating 1-10</td>
@@ -37,13 +35,14 @@
     <td>9</td>
       </tr>
   <tr>
+    <th colspan="2">Name</th>
     <td>Believer</td>
     <td>Imagine Dragons</td>
     <td>10</td>
+      <th rowspan="2">old 1</th>
       </tr>
 
   <tr>
-    <td>New</td>
     <td>Down Under</td>
     <td>Men At Work</td>
     <td>7</td>
