--- a/project8.html
+++ b/project8.html
@@ -14,9 +14,9 @@
   <h1>Top Ten</h1><br>
     
 <table border="1">
-  <th colspan="2">Name</th>
-  <th rowspan="2">old 1</th>
+  
   <tr>
+    <td rowspan="5">Old songs</td>
     <td>Name</td>
     <td>Artist</td>
     <td>Rating 1-10</td>
@@ -27,6 +27,7 @@
     <td>8</td>
   </tr>
   <tr>
+      <td rowspan="6">New songs</td>
     <td>Bohemian Rhapsody</td>
     <td>Queen</td>
     <td>10</td>
@@ -46,9 +47,8 @@
   <tr>
     <td>Down Under</td>
     <td>Men At Work</td>
-
- <th rowspan="2">old 1</th>    <td>7</td>
-      </tr>
+   <td>7</td>
+       </tr>
   <tr>
     <td>Breathe</td>    
     <td>G-Easy</td>
@@ -72,7 +72,7 @@
   <tr>
     <td>Sweet Emotion</td>
     <td>Aerosmith</td>
-   <td>10</td>
+    <td>10</td>
   </tr>
 </table>
 
