--- a/project8.html
+++ b/project8.html
@@ -53,7 +53,7 @@
     <td>7</td>
       </tr>
   <tr>
-     <td rowspan="5">Old songs</td>
+     <td rowspan="5">New songs</td>
     <td>Breathe</td>   
     <td>G-Easy</td>
      <td>Rap</td>
