--- a/project10.html
+++ b/project10.html
@@ -40,7 +40,7 @@
       
   <div id="main"><h1>My The Liger</h1>
     <p class="picture"><img src="images/liger.jpg"alt="Liger" width="100%" height=100%/></p>
-    <div id="text"><span class="style1">The amazing Liger</span> the coolest animal They live <span class="style1" A apex preditor</span> Its a mix between Lion and a Tiger, a true legend. 
+    <div id="text"><span class="style1">The amazing Liger</span> the coolest animal<span class="style1"preditor</span> Its a mix between Lion and a Tiger, a true apex preditor. 
       <p>this animal yet rare but is beautiful imafine a striped white lion</p></div> 
  
   </body>
