--- a/project10.html
+++ b/project10.html
@@ -41,7 +41,7 @@
   <div id="main"><h1>My The Liger</h1>
     <p class="picture"><img src="images/liger.jpg"alt="Liger" width="100%" height=100%/></p>
     <div id="text"><span class="style1">The amazing Liger</span> the coolest animal<span class="style1"preditor</span> Its a mix between Lion and a Tiger, a true apex preditor. 
-      <p>this animal yet rare but is beautiful imafine a striped white lion</p></div> 
+      <p>this animal yet rare but is beautiful imagine a striped white lion</p></div> 
  
   </body>
 
