--- a/project13.html
+++ b/project13.html
@@ -49,7 +49,7 @@
     
     </table>
       
-      <p>Ce clas peut me faire beaucoup ennuyer. Ne peux-tu pas faire de tests non plus?</p>
+      <p>*Ce` clas peut me faire beaucoup ennuyer.$ Ne peux-tu pas faire de tests non plus?</p>
   </body>
 
 </html>
