--- a/project14.html
+++ b/project14.html
@@ -17,6 +17,8 @@
         width: 100px;
         height: 30px;
         border: 1px solid black;
+        margin: 0px 0px;
+        border: 1px solid black;
         margin: 0px 0px 10px 25px;
         text-align: center;
         background-color: #0ef2ea;
@@ -29,7 +31,7 @@
         border: 1px solid black;
         margin: 0px 0px 10px 25px;
         text-align: center;
-        background-color: #6666ff;
+        background-color: #00f729;
         color: #ffffff;
       }
       #div3{
@@ -38,7 +40,53 @@
         border: 1px solid black;
         margin: 0px 0px 10px 25px;
         text-align: center;
-        background-color: #669999;
+        background-color: #f7021f;
+        color: px 10px 25px;
+        text-align: center;
+        background-color: #0ef2ea;
+        color: #px;
+        border: 1px solid black;
+        margin: 0px 0px 10px 25px;
+        text-align: center;
+        background-color: #0ef2ea;
+        color: #ffffff;
+      }
+      
+      #div2{
+        width: 100px;
+        height: 30px;
+        border: 1px solid black;
+        margin: 0px 0px 10px 25px;
+        text-align: center;
+        background-color: #00f729;
+        color: #ffffff;
+      }
+      #div3{
+        width: 100px;
+        height: 30px;
+        border: 1px solid black;
+        margin: 0px 0px 10px 25px;
+        text-align: center;
+        background-color: #f7021f;
+        color: ffffff;
+      }
+      
+      #div2{
+        width: 100px;
+        height: 30px;
+        border: 1px solid black;
+        margin: 0px 0px 10px 25px;
+        text-align: center;
+        background-color: #00f729;
+        color: #ffffff;
+      }
+      #div3{
+        width: 100px;
+        height: 30px;
+        border: 1px solid black;
+        margin: 0px 0px 10px 25px;
+        text-align: center;
+        background-color: #f7021f;
         color: #ffffff;
       }
     </style>
@@ -51,10 +99,10 @@
       <p>#0ef2ea</p>
     </div>
     <div id="div2">
-      <p>#6666ff</p> 
+      <p>#00f729</p> 
     </div>
     <div id="div3">
-      <p>#669999</p>
+      <p>#f7021f</p>
     </div>
   </body>
 
