--- a/project15.html
+++ b/project15.html
@@ -76,9 +76,9 @@
     <td>Arial</td>
     <td>This is a simple font and one of the most popular in websites.</td>
   </tr>
-  <tr  class="font2>
+  <tr  class="font2">
     <td>Times New Roman</td>
-    <td>This serif font is the default for many web bowsers.</td>
+    <td>This serif font is the default for many web browsers.</td>
   </tr>
   <tr class="font3">
     <td>Courier New</td>
@@ -102,7 +102,7 @@
   </tr>
   <tr class="font8">
     <td>Lucida Sans Unicode</th>
-    <td>This lucida family of fonts is est known for its use in Macs</td>
+    <td>This lucida family of fonts is best known for its use in Macs</td>
   </tr>
   <tr class="font9">
     <td>Palatino Linotype</td>
