--- a/project19.html
+++ b/project19.html
@@ -24,7 +24,7 @@
    <iframe width="450" height="350" src="https://www.youtube.com/embed/P7cFiE_CWMY" frameborder="0"</iframe>
     
     <h2>cool Video2</h2>
-    <iframe width="250" height="225" src="https://www.youtube.com/embed/fghG7zF5GK8" frameborder="0" allowfullscreen></iframe>
+    <iframe width="250" height="225" src="https://www.youtube.com/embed/fghG7zF5GK8" frameborder="0"</iframe>
     
   </body>
 
