--- a/project19.html
+++ b/project19.html
@@ -22,11 +22,11 @@
   <body>
     <div class="div1">
     <h2>cool Video1</h2>
-   <iframe width="450" height="350" src="https://www.youtube.com/embed/P7cFiE_CWMY" frameborder="0"</iframe>
+   <iframe width="450" height="350" src="https://www.youtube.com/embed/P7cFiE_CWMY" frameborder="0"></iframe>
     </div>
     <div class="div2">
     <h2>cool Video2</h2>
-    <iframe width="250" height="225" src="https://www.youtube.com/embed/fghG7zF5GK8" frameborder="0"</iframe>
+    <iframe width="250" height="225" src="https://www.youtube.com/embed/fghG7zF5GK8" frameborder="0"></iframe>
     </div>
   </body>
 
