--- a/project17.html
+++ b/project17.html
@@ -1,7 +1,14 @@
-
-
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>Page Title Goes Here</title>
+  </head>
+
+  <body>
+    <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -13,11 +20,11 @@
   <body>
     
     <div class="header">Header</div>
-    <div class="nav floatleft">Nav Menu <br/>
+    <div class="nav floatleft">Menu <br/>
     <a href="project4.html"> Photo Gallery</a><br/>
-    <a href="project8.html"> My Music</a><br/>
-    <a href="project10.html"> My Favorite Animal</a><br/>
-    <a href="index.html;">Home Page</a>
+    <a href="project8.html"> Favorite Music</a><br/>
+    <a href="project10.html"> Favorite Animal</a><br/>
+    <a href="index.html">Home Page</a>
     </div>
     <div class="sidebar floatright">Sidebar</div>
     <div class="main">Main Content</div>
@@ -26,4 +33,10 @@
   </body>
 
 </html>
+
+
+  </body>
+
+</html>
+
 
