--- a/project17.html
+++ b/project17.html
@@ -9,7 +9,7 @@
 
   <body>
 <div class="header">Header</div>
-    <div class="nav floatleft">Nav Menu <br/>
+    <div class="nav floatleft">The Menu <br/>
     <a href="project4.html"> Photo Gallery</a><br/>
     <a href="project8.html"> My Music</a><br/>
     <a href="project10.html"> My Favorite Animal</a><br/>
