--- a/project18.html
+++ b/project18.html
@@ -16,6 +16,7 @@
         <img src="images/jackclubs.png" class="jackclubs" width="64" height="100" alt="Jack"/>
         <img src="images/tendiamonds.png" class="tendiamonds" width="64" height="100" alt="Ten"/>
     </div>
+    <body class="gradient">
   </body>
 
 </html>
